--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="js csstransforms3d">
 
-<head><script src="/nonotnone.0/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=nonotnone.0/livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8"> <meta name="description" content="">
 <meta name="author" content="tuanatran.vn@gmail.com">
  <link rel="icon" href="/nonotnone.0/images/favicon.png" type="image/png">
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/nonotnone.0/css/nucleus.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/fontawesome-all.min.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/hybrid.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/featherlight.min.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/perfect-scrollbar.min.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/theme.css?1715495233" rel="stylesheet">
-    <link href="/nonotnone.0/css/hugo-theme.css?1715495233" rel="stylesheet">
+    <link href="/nonotnone.0/css/nucleus.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/fontawesome-all.min.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/hybrid.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/featherlight.min.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/perfect-scrollbar.min.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/theme.css?1715495350" rel="stylesheet">
+    <link href="/nonotnone.0/css/hugo-theme.css?1715495350" rel="stylesheet">
     
-      <link href="/nonotnone.0/css/theme-workshop.css?1715495233" rel="stylesheet">
+      <link href="/nonotnone.0/css/theme-workshop.css?1715495350" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
